# MXKeyboard

./: .gitattributes  .gitignore  .gitmodules  .lgtm.yml  meson.build
board/: .gitignore  Column_decode.sch  Key_matrix.sch  LEDs_+_Drivers.sch  MXKeyboard-cache.lib  MXKeyboard-eagle-import.lib  MXKeyboard.lbr  MXKeyboard.pro  MXKeyboard.sch  MXKeyboard_BiLED.brd  MXKeyboard_BiLED.sch  MXKeyboard_MonoLED.brd  MXKeyboard_MonoLED.sch  MXKeyboard_NoLED.brd  MXKeyboard_NoLED.sch  MXKeyboard_RGB-cache.lib  MXKeyboard_RGB-eagle-import.lib  MXKeyboard_RGB.brd  MXKeyboard_RGB.pro  MXKeyboard_RGB.sch  Power_Control.sch  Processor_+_comms.sch  QFNLevelShifter.brd  QFNLevelShifter.sch  fp-lib-table  sym-lib-table
board/MXKeyboard.pretty/: MX_KEY_0.7X1.45.kicad_mod  MX_KEY_1.25u.kicad_mod  MX_KEY_ENTER.kicad_mod  TM_0508_A_6.kicad_mod
board/MXKeyboard_RGB.pretty/: 20021121-00010C4LF.kicad_mod  3,2-PAD.kicad_mod  7M.kicad_mod  C0603K.kicad_mod  C0805K.kicad_mod  CHIPLED_1612.kicad_mod  DHVQFN-14.kicad_mod  DHVQFN-16.kicad_mod  MICRO-USB-B-(IN_PCB).kicad_mod  MX_KEY_0.7X1.45.kicad_mod  MX_KEY_0.9.kicad_mod  MX_KEY_1.1.kicad_mod  MX_KEY_1.25u.kicad_mod  MX_KEY_1.3.kicad_mod  MX_KEY_1.45X0.7.kicad_mod  MX_KEY_2.kicad_mod  MX_KEY_4.45.kicad_mod  MX_KEY_ENTER.kicad_mod  MX_KEY_NORM.kicad_mod  MX_STABILISER.kicad_mod  PVQFN32.kicad_mod  R0603.kicad_mod  R0603@1.kicad_mod  R0805.kicad_mod  SOT23-5L.kicad_mod  SOT23.kicad_mod  SOT26.kicad_mod  SOT363_PHILIPS.kicad_mod  TM_0508_A_6.kicad_mod  VQFN-64.kicad_mod
board/bom/: MXKeyboard-rev2.html
case/: MXKeyboard.FCStd  MXKeyboard.iam  MXKeyboard.keyplate.FCStd  bottomSpacer.ipt  caseBottom.ipt  caseTop.ipt  cirpin.ipt  keyPlate.ipt  keyboard.ipt  mxkeyboard.FCStd  plateSpacers.ipt  screwpin.ipt  topStandoff.ipt
case/dxf/: keyplate.dxf
case/envelope/: MXKeyboard_RGB.blend
cross-files/: avr-system.meson  avr.meson
firmware/: MXKeyboard.cxx  atxmega256a3u.ld  dma.cxx  flash.hxx  fuses.cxx  keyMatrix.cxx  led.cxx  led.hxx  memory.cxx  meson.build  profile.cxx  ps2.cxx  startup.cxx  system.cxx  timer.cxx  uart.cxx  usb.cxx  usbRequests.cxx
firmware/include/: MXKeyboard.hxx  constants.hxx  flash.hxx  indexSequence.hxx  indexedIterator.hxx  interrupts.hxx  keyMatrix.hxx  mask.hxx  profile.hxx  ps2.hxx  uart.hxx  usbDescriptors.hxx  usbTypes.hxx
firmware/include/c++/: algorithm  array  cstddef  cstdint  cstring  limits  string_view  tuple  type_traits  utility
firmware/include/c++/bits/: move.hxx  pair.hxx  rangeAccess.hxx
firmware/include/usb/: core.hxx  descriptors.hxx  device.hxx  hid.hxx  types.hxx
firmware/usb/: descriptors.cxx  device.cxx  hid.cxx
hardware/: .gitignore  Column_decode.kicad_sch  Key_matrix.kicad_sch  Key_matrix.sch  LEDs_+_Drivers.kicad_sch  LEDs_+_Drivers.sch  MXKeyboard-eagle-import.dcm  MXKeyboard.kicad_dru  MXKeyboard.kicad_pro  MXKeyboard.kicad_sch  MXKeyboard.kicad_sym  MXKeyboard.sch  Power_Control.kicad_sch  Power_Control.sch  Processor_+_comms.kicad_sch  fp-lib-table  sym-lib-table
hardware/MXKeyboard.pretty/: MX_KEY_1.1.kicad_mod  MX_KEY_1.3.kicad_mod
scripts/: get_fw_size.py
